Fix spacing on program hero arrow links

--- a/web/themes/custom/citizen_dart/components/04-units/nodes/academic-program/_academic-program.scss
+++ b/web/themes/custom/citizen_dart/components/04-units/nodes/academic-program/_academic-program.scss
@@ -80,6 +80,13 @@
       .field-intro {
         margin-bottom: 6.5rem;
       }
+      .field-links {
+        div {
+          &:not(:last-child){
+            margin-bottom: $spaceSm;
+          }
+        }
+      }
     }
   }
   .block-body {
@@ -138,11 +145,6 @@
     }
   }
   .field-links{
-    div {
-      &:not(:last-child){
-        margin-bottom: $spaceSm;
-      }
-    }
     a {
       @include linkArrow(gold, lg);
     }
